framec_tests/language_specific/java/v3_facade_smoke/negative/strict_multi_errors.frm
@target java

system S {
    machine:
        $A {
            e() {
                -> $B();
                List<String x;   // missing '>'
                int y = ;        // missing initializer
                if ( { ) { }     // malformed if
            }
        }
        $B {
        }
}

